--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -23,10 +23,14 @@ strong {
     line-height: 25px;
 }
 
-
 .post ul li,
 .post ol li {
   line-height: 25px;
+}
+
+.post ul li ul,
+.post ol li ol {
+  margin-left: 25px;
 }
 
 .no-toc {
