Ajustes de front-end

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,12 +1,13 @@
 <div class="sidebar">
   <div class="sidebar-sticky">
     <div class="sidebar-about">
-      <a href="{{ site.baseurl }}/">
-        <img src="{{ site.baseurl }}/assets/images/logo.png" alt="{{ site.title }}">
-      </a>
       <a title="{% t global.toggle %} {% t global.sidebar %}" class="hamburger">
         <i class="fa fa-bars hamb-menu" aria-hidden="true"></i>
       </a>
+      <a href="{{ site.baseurl }}/">
+        <img src="{{ site.baseurl }}/assets/images/logo.png" alt="{{ site.title }}">
+      </a>
+      <div></div>
     </div>
 
     <div id="toc"></div>
