--- a/_layouts/cielo.html
+++ b/_layouts/cielo.html
@@ -170,6 +170,14 @@
     <script src="{{ site.baseurl }}/assets/js/lunr.js"></script>
     <script src="{{ site.baseurl }}/assets/js/search.js"></script>
     {% endif %}
-    <script>jQuery( "div.highlight" ).append( "<a class='expand-btn' id='expand-button'><i class=fa fa-arrows-alt aria-hidden=true></i>Expandir</a>" );</script>
+    <script>
+      $( 'div.highlight' ).append( '<a class=expand-btn id=expand-button><i class=fa fa-arrows-alt aria-hidden=true></i>Expandir</a>' );
+      $('.highlighter-rouge').each(function (index) {
+          if($(this).next().hasClass('highlighter-rouge')) {
+              $(this).next().andSelf().wrapAll('<div class="language-group"></div>');
+          }
+      });
+      $('.language-group').prepend('<div class="language-buttons"><a href="#" class="active">JSON</a><a href="#">cURL</a></div>');
+    </script>
   </body>
 </html>
