--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -799,11 +799,18 @@ code {
     border-radius: 5px;
 }
 
+.highlight {
+    border-radius: 0;
+}
+
 .highlighter-rouge pre.highlight {
     background-color: #28292d;
     color: #afb8bb;
     padding: 17px;
-    margin-top: 1rem;
+    margin-top: 0;
+    margin-bottom: 0;
+    border-radius: 0;
+    font-size: 11px;
 }
 
 .content table {
@@ -1102,6 +1109,7 @@ ul.search-results {
 
 div.highlight {
     position: relative;
+    margin-bottom: 0;
 }
 
 a.expand-btn {
@@ -1149,9 +1157,46 @@ a.hide-btn .fa {
 }
 
 
-
-
 /* Expandir */
+
+/* Trocar Linguagem */
+
+.language-group {
+    display: flex;
+    margin: 2em 0;
+    width: 100%;
+}
+
+.language-buttons {
+    background-color: #202224;
+}
+
+.language-buttons a.active {
+    background-color: #00aeef;
+    text-decoration: none;
+}
+
+.language-buttons a:hover {
+    background-color: #00aeef;
+    cursor: pointer;
+    text-decoration: none;
+    color: #fff;
+}
+
+.language-buttons a {
+    display: block;
+    background-color: #3e3f42;
+    color: #fff;
+    padding: 5px 25px;
+    margin: 10px;
+    border-radius: 2px;
+}
+
+.highlighter-rouge {
+    width: 100%;
+}
+
+/* Trocar Linguagem */
 
 
 /* Queries */
@@ -1201,6 +1246,16 @@ a.hide-btn .fa {
         clear: right;
         box-sizing: border-box;
         text-shadow: 0px 1px 2px rgba(0,0,0,0.4);
+    }
+
+    .language-buttons {
+        position: absolute;
+        right: 0;
+        width: 25%;
+        padding: 2em 28px;
+        float: right;
+        clear: right;
+        box-sizing: border-box;
     }
 
     a.expand-btn {
