--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -49,27 +49,23 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 h1 {
-    font-size: 18px;
+    font-size: 24px;
     line-height: normal;
-    font-weight: normal;
 }
 
 h2 {
-    font-size: 14px;
+    font-size: 20px;
     line-height: normal;
-    font-weight: normal;
 }
 
 h3 {
-    font-size: 12px;
+    font-size: 18px;
     line-height: normal;
-    font-weight: normal;
 }
 
 h4 {
-    font-size: 10px;
+    font-size: 14px;
     line-height: normal;
-    font-weight: normal;
 }
 
 
@@ -1231,12 +1227,20 @@ div:empty {
 
 /* Menu Items */
 
+.tocify {
+    font-weight: bold;
+}
+
 .tocify-header.nav > ul.tocify-subheader.nav {
     background-color: #f5f5f5;
 }
 
 .tocify-header.nav > ul.tocify-subheader.nav > ul.tocify-subheader {
     background-color: #FAFAFA;
+}
+
+ul.tocify-header > ul.tocify-subheader > ul.tocify-subheader > ul.tocify-subheader li a {
+    font-weight: normal;
 }
 
 /* Menu Items */
